--- a/templates/basic-powershell-matrix.yml
+++ b/templates/basic-powershell-matrix.yml
@@ -2,7 +2,7 @@
 # Install-Module -Name PSAdvantage
 
 # Template for basic PowerShell automation
-name: Custom PowerShell Automation
+name: $name
 
 on:
   workflow_dispatch:
