--- a/templates/powershell-installPSNotebook.yml
+++ b/templates/powershell-installPSNotebook.yml
@@ -2,7 +2,7 @@
 # Install-Module -Name PSAdvantage
 
 # Template for basic PowerShell automation
-name: PowerShell Notebook Setup
+name: $name - with PowerShell Notebook Setup
 
 on:
   workflow_dispatch:
