--- a/templates/basic-powershell-windows.yml
+++ b/templates/basic-powershell-windows.yml
@@ -2,7 +2,7 @@
 # Install-Module -Name PSAdvantage
 
 # Template for basic PowerShell automation
-name: Custom PowerShell Automation - Windows
+name: $name - Windows
 
 on:
   workflow_dispatch:
